implement js extraction from python code through pre-processor

--- a/examples/hello/index.html
+++ b/examples/hello/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <title>Document</title>
 </head>
-<body>
+<body onload="__hello.hello_world()">
   <div id="app"></div>
 </body>
-<script src="app.js"></script>
+<script src="dist/app.js"></script>
 </html>
